--- a/StartupCarvaan/app/src/main/res/layout/activity_card_view.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_card_view.xml
@@ -52,11 +52,17 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
                         <ProgressBar
                             android:layout_width="match_parent"
                             android:layout_height="120dp"
+                            android:id="@+id/progress_bar"
                             style="?android:progressBarStyleHorizontal"
                             android:progress="80"
                             android:layout_gravity="center"
@@ -64,7 +70,24 @@
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            android:progressDrawable="@drawable/circle"/>
+                            android:progressDrawable="@drawable/circle">
+                        </ProgressBar>
+
+                        <TextView
+                            android:id="@+id/text_view_progress"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                         android:layout_gravity="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
+                            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
+                            app:layout_constraintStart_toStartOf="@+id/progress_bar"
+                            app:layout_constraintTop_toTopOf="@+id/progress_bar"
+                            tools:text="60%" />
+
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
 
                     </LinearLayout>
 
@@ -112,7 +135,7 @@
                                     android:text="Balance"
                                     android:textColor="@color/white"
                                     android:textSize="22sp"
-                                  android:layout_marginLeft="32dp"
+                                    android:layout_marginLeft="32dp"
                                     android:layout_marginTop="32dp">
 
 
@@ -199,9 +222,17 @@
                         android:layout_weight="1"
                         android:layout_height="match_parent">
 
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            >
+
+
+
                         <ProgressBar
                             android:layout_width="match_parent"
                             android:layout_height="120dp"
+                            android:id="@+id/progress_bar1"
                             style="?android:progressBarStyleHorizontal"
                             android:progress="80"
                             android:layout_gravity="center"
@@ -210,6 +241,22 @@
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             android:progressDrawable="@drawable/circle"/>
+
+
+                            <TextView
+                                android:id="@+id/text_view_progress1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/white"
+                                android:layout_gravity="center"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                                app:layout_constraintBottom_toBottomOf="@+id/progress_bar1"
+                                app:layout_constraintEnd_toEndOf="@+id/progress_bar1"
+                                app:layout_constraintStart_toStartOf="@+id/progress_bar1"
+                                app:layout_constraintTop_toTopOf="@+id/progress_bar1"
+                                tools:text="60%" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
 
                     </LinearLayout>
 
