--- a/StartupCarvaan/app/src/main/res/layout/activity_card_view.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_card_view.xml
@@ -38,46 +38,57 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:background="#000"
                 android:padding="16dp"
                 app:cardCornerRadius="50dp"
                 android:layout_marginBottom="16dp"
-                app:cardBackgroundColor="@android:color/holo_red_light">
+                app:cardBackgroundColor="@color/purple"
+              >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="15dp"
-                    >
 
+                    android:layout_marginBottom="15dp"
+
+                    android:orientation="horizontal">
 
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_weight="2"
                         android:layout_height="match_parent"
+                        android:layout_marginVertical="16dp"
 
-                        android:orientation="vertical"
-                        android:layout_marginVertical="16dp" >
+                        android:layout_weight="2"
+                        android:orientation="vertical">
 
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="18dp"
-                            >
+                            android:layout_marginTop="10dp"
+                            android:gravity="center_vertical"
+                           >
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:textColor="@color/white"
+                                android:layout_marginLeft="35dp"
                                 android:text="My Portfolio"
-                                android:gravity="center"
-                                android:textSize="30sp">
+                                android:textColor="@color/white"
+                                android:textSize="26sp">
 
                             </TextView>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right">
+                            <ImageView
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:layout_marginRight="50dp"
+                                android:src="@drawable/purpledot"/>
+                            </LinearLayout>
 
                         </LinearLayout>
 
@@ -96,11 +107,11 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="32dp"
+                                    android:layout_marginTop="32dp"
                                     android:text="Balance"
                                     android:textColor="@color/white"
-                                    android:textSize="22sp"
-                                    android:layout_marginLeft="32dp"
-                                    android:layout_marginTop="32dp">
+                                    android:textSize="22sp">
 
 
                                 </TextView>
@@ -108,18 +119,17 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="32dp"
                                     android:text="32$"
                                     android:textColor="@color/white"
-                                    android:textSize="20sp"
-                                    android:layout_marginLeft="32dp"
-                                    >
+                                    android:textSize="20sp">
 
 
                                 </TextView>
 
 
-
                             </LinearLayout>
+
                             <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
@@ -130,11 +140,11 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="32dp"
+                                    android:layout_marginTop="32dp"
                                     android:text="Balance"
                                     android:textColor="@color/white"
-                                    android:textSize="22sp"
-                                    android:layout_marginLeft="32dp"
-                                    android:layout_marginTop="32dp">
+                                    android:textSize="22sp">
 
 
                                 </TextView>
@@ -142,11 +152,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="32dp"
                                     android:text="32$"
                                     android:textColor="@color/white"
-                                    android:textSize="20sp"
-                                    android:layout_marginLeft="32dp"
-                                    >
+                                    android:textSize="20sp">
 
 
                                 </TextView>
@@ -158,7 +167,6 @@
 
 
                     </LinearLayout>
-
 
 
                 </LinearLayout>
@@ -170,46 +178,57 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:background="#000"
+
                 android:padding="16dp"
                 app:cardCornerRadius="50dp"
                 android:layout_marginBottom="16dp"
-                app:cardBackgroundColor="@android:color/holo_red_light">
+                app:cardBackgroundColor="@color/orange"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="15dp"
-                    >
 
+                    android:orientation="horizontal">
 
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_weight="2"
                         android:layout_height="match_parent"
+                        android:layout_marginVertical="16dp"
 
-                        android:orientation="vertical"
-                        android:layout_marginVertical="16dp" >
+                        android:layout_weight="2"
+
+                        android:orientation="vertical">
 
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="18dp"
-                            >
+                            android:layout_marginTop="10dp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:textColor="@color/white"
+                                android:layout_marginLeft="35dp"
                                 android:text="My Portfolio"
-                                android:gravity="center"
-                                android:textSize="30sp">
+                                android:textColor="@color/white"
+                                android:textSize="26sp">
 
                             </TextView>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right">
+                                <ImageView
+                                    android:layout_width="32dp"
+                                    android:layout_height="32dp"
+                                    android:layout_marginRight="50dp"
+                                    android:src="@drawable/orangedot"/>
+                            </LinearLayout>
+
 
                         </LinearLayout>
 
@@ -228,30 +247,30 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="32dp"
+                                    android:layout_marginTop="32dp"
                                     android:text="Balance"
                                     android:textColor="@color/white"
-                                    android:textSize="22sp"
-                                    android:layout_marginLeft="32dp"
-                                    android:layout_marginTop="32dp">
+                                    android:textSize="22sp">
 
 
                                 </TextView>
+
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="32dp"
                                     android:text="32$"
                                     android:textColor="@color/white"
-                                    android:textSize="20sp"
-                                    android:layout_marginLeft="32dp"
-                                    >
+                                    android:textSize="20sp">
 
 
                                 </TextView>
 
 
-
                             </LinearLayout>
+
                             <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
@@ -262,11 +281,11 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="32dp"
+                                    android:layout_marginTop="32dp"
                                     android:text="Balance"
                                     android:textColor="@color/white"
-                                    android:textSize="22sp"
-                                    android:layout_marginLeft="32dp"
-                                    android:layout_marginTop="32dp">
+                                    android:textSize="22sp">
 
 
                                 </TextView>
@@ -274,11 +293,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="32dp"
                                     android:text="32$"
                                     android:textColor="@color/white"
-                                    android:textSize="20sp"
-                                    android:layout_marginLeft="32dp"
-                                    >
+                                    android:textSize="20sp">
 
 
                                 </TextView>
@@ -290,7 +308,6 @@
 
 
                     </LinearLayout>
-
 
 
                 </LinearLayout>
