--- a/StartupCarvaan/app/src/main/res/layout/activity_payout.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_payout.xml
@@ -1,9 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".payments.payout">
+    android:orientation="vertical"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:background="@color/blue"
+    tools:context=".payments.payout">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
+
+            android:gravity="center_horizontal|bottom"
+            android:orientation="horizontal"
+            android:background="@color/blue">
+            <EditText
+                android:id="@+id/coins"
+                android:layout_width="140dp"
+                android:layout_height="38dp"
+                android:layout_marginRight="11dp"
+                android:ems="10"
+                android:textColorHint=""
+                android:background="@drawable/inputtype"
+                android:inputType="number"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:hint="Enter No.of coins"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="#FFFFFF"
+                android:layout_marginTop="20dp"
+                android:text="You get"
+                android:textSize="18dp" />
+            <TextView
+                android:id="@+id/convertedMoney"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginLeft="8dp"
+                android:textStyle="bold"
+                android:textColor="#FFFFFF"
+                android:layout_marginTop="20dp"
+                android:text="0"
+                android:textSize="20dp" />
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="28dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="15dp"
+                android:src="@drawable/vsm_coin"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="6.2"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+
+                android:gravity="center">
+                <EditText
+                    android:id="@+id/upiname"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginLeft="50dp"
+                    android:ems="10"
+                    android:textSize="15sp"
+                    android:background="@drawable/inputtype"
+                    android:inputType="textPersonName"
+                    android:gravity="center"
+                    android:textColorHint="#000000"
+                    android:layout_marginTop="20dp"
+                    android:hint="Enter your Full Name"
+                    />
+                <EditText
+                    android:id="@+id/phonenumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginLeft="50dp"
+                    android:ems="10"
+                    android:textSize="15sp"
+                    android:background="@drawable/inputtype"
+                    android:inputType="textPersonName"
+                    android:gravity="center"
+                    android:textColorHint="#000000"
+                    android:layout_marginTop="25dp"
+                    android:hint="Enter your phone number"
+                    />
+                <EditText
+                    android:id="@+id/upi_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginLeft="50dp"
+
+                    android:ems="10"
+                    android:textSize="15sp"
+                    android:background="@drawable/inputtype"
+                    android:inputType="textPersonName"
+                    android:gravity="center"
+                    android:textColorHint="#000000"
+                    android:layout_marginTop="25dp"
+                    android:hint="Enter upi id"
+                    />
+                <!--            <TextView-->
+                <!--                android:layout_width="wrap_content"-->
+                <!--                android:layout_height="wrap_content"-->
+                <!--                android:gravity="center"-->
+
+                <!--                android:textColor="#FFFFFF"-->
+                <!--                android:layout_marginTop="25dp"-->
+                <!--                android:text="or enter bank account details"-->
+                <!--                android:textSize="18dp" />-->
+
+
+                <!--            <EditText-->
+                <!--                android:id="@+id/bank_account"-->
+                <!--                android:layout_width="match_parent"-->
+                <!--                android:layout_height="40dp"-->
+                <!--                android:layout_marginRight="50dp"-->
+                <!--                android:layout_marginLeft="50dp"-->
+                <!--                android:ems="10"-->
+                <!--                android:layout_marginTop="18dp"-->
+                <!--                android:background="@drawable/rst"-->
+                <!--                android:inputType="textPersonName"-->
+                <!--                android:gravity="center"-->
+                <!--                android:textSize="15sp"-->
+                <!--                android:textColorHint="@color/black"-->
+                <!--                android:hint="Enter acount number"-->
+                <!--                ></EditText>-->
+                <!--            <EditText-->
+                <!--                android:id="@+id/ifsc_code"-->
+                <!--                android:layout_width="match_parent"-->
+                <!--                android:layout_height="40dp"-->
+                <!--                android:layout_marginRight="50dp"-->
+                <!--                android:layout_marginLeft="50dp"-->
+                <!--                android:ems="10"-->
+                <!--                android:layout_marginTop="18dp"-->
+                <!--                android:textSize="15sp"-->
+                <!--                android:textColorHint="@color/black"-->
+                <!--                android:background="@drawable/rst"-->
+                <!--                android:inputType="textPersonName"-->
+                <!--                android:gravity="center"-->
+                <!--                android:hint="Enter IFSC"-->
+                <!--                ></EditText>-->
+                <!--            <EditText-->
+                <!--                android:id="@+id/account_holder_name"-->
+                <!--                android:layout_width="match_parent"-->
+                <!--                android:layout_height="40dp"-->
+                <!--                android:layout_marginRight="50dp"-->
+                <!--                android:layout_marginLeft="50dp"-->
+                <!--                android:ems="10"-->
+                <!--                android:textSize="15sp"-->
+
+                <!--                android:textColorHint="@color/black"-->
+                <!--                android:layout_marginTop="18dp"-->
+                <!--                android:background="@drawable/rst"-->
+                <!--                android:inputType="textPersonName"-->
+                <!--                android:gravity="center"-->
+                <!--                android:hint="Enter Account Holder's name"-->
+                <!--                ></EditText>-->
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+                    <Button
+                        android:layout_marginTop="20dp"
+                        android:id="@+id/withdrawButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="#2C9FD3"
+                        android:text="Withdraw"
+                        />
+
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
